--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.1"
+    "@vercel/postgres": "^0.10.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "vercel": "^39.1.1"
   }
 }
